[package]
name = "splitterrust_server"
version = "0.1.0"
authors = ["Maximilian Konter <biskit1943@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
rand = "0.7"
splitterrust_db = { path = "../db" }
dotenv = "0.15"
log = "0.4"
env_logger = "0.7"
